# samp-plugin-mysql

./: .gitignore  CMakeLists.txt  DEPS
src/: CCallback.cpp  CConnection.cpp  CHandle.cpp  CLog.cpp  CLog.hpp  CMakeLists.txt  COptions.cpp  COptions.hpp  COrm.cpp  COrm.hpp  CQuery.cpp  CQuery.hpp  CResult.cpp  main.cpp  mysql.hpp  natives.cpp
